2/12/2023
	Added test cases for Double X-Sums and Broken 159/Gamma Epsilon
	Added support for Skyscraper Sums, which clue the sum of the Skyscrapers seen...inspired by ICHTUES

2/11/2023	
	Added alias for Gamma-Epsilon rules.
	Updated input for indexing rows and columns to allow a purely negative constraint (i.e., no cells in row/col true)
	Added debug output to support resolution of Issue #25

2/3/2023
	Added support for repelling digits, inspired by pirate sudoku...thanks clover!
	Added support for punctured cages, inspired by zetamath...thanks!
	Added test cases

1/15/2023
	Added support for magic lines...thanks Raumplaner!
	Added support for psycho killer cages, including a test case
	Added support for global Modular squares, similar to Entropy but using the modular grouping of digits
	Added support for knightmare constraint, including test case
	Added support for logic bombs

12/22/22
	Added support for full rank clues
	Added support for David and Goliath pairs (Inspired by Bill Murphy...thanks!)
	Added support for All Odd or Even clues (Inspired by clover!...thanks!)
	Added support for Parity Party clues
	Added support for Double X-Sums

11/17/22
	Added support for minimax clues (Inspired by clover!...thanks!)
	Added support for maximin clues (Inspired by clover!...thanks!)
	Added support for repeating arrows (Inspired by Richard Stolk...thanks!)

10/25/22
	Added support for 10 lines
	Added support for heavy arrows
	Added support for clock lines
	Added support for Either-Or clues
	Added test harness support to doubleDoku puzzles
	Added multiple test cases
	
10/6/22ter
	Added additional test cases

10/6/22bis